springboot-kafka/springboot-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  type: NodePort
  selector:
    app: springboot-kafka-producer
  ports:
   - name: http-rest-proxy
     port: 7777
     targetPort: 7777
      #nodePort: 30007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-kafka-producer
spec:
  selector:
    matchLabels:
      app: springboot-kafka-producer
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-kafka-producer
    spec:
      containers:
      - name: springboot-kafka-producer
        imagePullPolicy: Always
        image: aballaci/springboot-kafka-producer:v6
        ports:
        - containerPort: 7777
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-kafka-consumer
spec:
  selector:
    matchLabels:
      app: springboot-kafka-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-kafka-consumer
    spec:
      containers:
      - name: springboot-kafka-consumer
        imagePullPolicy: Always
        image: aballaci/springboot-kafka-consumer:v4
