springboot-kafka/springboot-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: officefriday-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: officefriday
spec:
  hosts:
  - "*"
  gateways:
  - officefriday-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springboot-kafka-service
        port:
          number: 7777
